Change display messages for `submission set`